==> 662qi/esp32s3_balance_scooter_yolo11_detect_fire/balance_scooter_v_4.1/components/OLED/oled.c <==
#include "oled.h"

void oled_write_cmd(uint8_t cmd)
{
    // 定义命令链句柄
    i2c_cmd_handle_t cmd_h = i2c_cmd_link_create();

    i2c_master_start(cmd_h);
    i2c_master_write_byte(cmd_h, (OLED_ADDR << 1) | I2C_MASTER_WRITE, true);    // 寻址
    i2c_master_write_byte(cmd_h, 0x00, true);           // Control Byte(写命令)
    i2c_master_write_byte(cmd_h, cmd, true);            // 写入命令
    i2c_master_stop(cmd_h);

    i2c_master_cmd_begin(I2C_NUM_0, cmd_h, pdMS_TO_TICKS(10));
    i2c_cmd_link_delete(cmd_h);
}

void oled_write_data(uint8_t data)
{
    // 定义命令链句柄
    i2c_cmd_handle_t cmd_h = i2c_cmd_link_create();

    i2c_master_start(cmd_h);
    i2c_master_write_byte(cmd_h, (OLED_ADDR << 1) | I2C_MASTER_WRITE, true);    // 寻址
    i2c_master_write_byte(cmd_h, 0x40, true);           // Control Byte(写数据)
    i2c_master_write_byte(cmd_h, data, true);           // 写入数据
    i2c_master_stop(cmd_h);

    i2c_master_cmd_begin(I2C_NUM_0, cmd_h, pdMS_TO_TICKS(10));
    i2c_cmd_link_delete(cmd_h);
}

void oled_init(void)
{
    myi2c0_init();

    vTaskDelay(pdMS_TO_TICKS(100));

    oled_write_cmd(0xAE);               // 关闭显示（休眠）
    oled_write_cmd(0xD5);               // 设置时钟分频因子
    oled_write_cmd(0x80);               // 分频值 = 1, 振荡频率 = 默认

    oled_write_cmd(0xA8);               // 设置驱动路数（1/64占空比）
    oled_write_cmd(0x3F);               // 0x3F = 64duty，适用于0.96寸OLED

    oled_write_cmd(0xD3);               // 设置显示偏移
    oled_write_cmd(0x00);               // 无偏移

    oled_write_cmd(0x40);               // 设置显示起始行（第0行开始）

    oled_write_cmd(0x8D);               // 电荷泵配置（必须开，否则不亮）
    oled_write_cmd(0x14);               // 开启电荷泵（关键！）

    oled_write_cmd(0x20);               // 设置内存地址模式
    oled_write_cmd(0x00);               // 水平地址模式

    oled_write_cmd(0xA1);               // 段重映射：左右反转
    oled_write_cmd(0xC8);               // COM扫描方向：上下反转

    oled_write_cmd(0xDA);               // 设置COM硬件引脚配置
    oled_write_cmd(0x12);               // 适配0.96寸OLED

    oled_write_cmd(0x81);               // 设置对比度
    oled_write_cmd(0xCF);               // 对比度值（0~255）

    oled_write_cmd(0xD9);               // 设置预充电周期
    oled_write_cmd(0xF1);               // 充电周期配置

    oled_write_cmd(0xDB);               // 设置VCOM取消电平
    oled_write_cmd(0x30);               // 配置为0.83Vcc

    oled_write_cmd(0xA4);               // 全局显示开启，跟随GDDRAM内容

    oled_write_cmd(0xA6);               // 正常显示（1亮0灭）

    oled_write_cmd(0xAF);               // 打开显示（OLED点亮）

    vTaskDelay(pdMS_TO_TICKS(100));
    oled_clear();
}

void oled_clear(void)
{
    /* 单字节清屏函数(太慢)
    for(uint8_t i = 0; i < 8; i++){
        oled_set_cursor(0, i);
        for(uint8_t j = 0; j < 128; j++){
            oled_write_data(0x00);
        }
    }
    */

   // 多字节清屏函数
    uint8_t buf[128] = {0};
    for(uint8_t i=0; i<8; i++)
    {
        oled_set_cursor(0, i);
        oled_write_datas(buf, 128);  // 一次性发128字节
    }
}

void oled_show_char(uint8_t x, uint8_t page, char ch, uint8_t fontsize)
{
    if(fontsize == 6)
    {
        oled_set_cursor(x, page);
        /* 单字节发送(太慢)
        for(uint8_t i = 0; i < 6; i++)
        {
            oled_write_data(OLED_F6x8[ch - ' '][i]);
        }
        */
        // 多字节发送
        oled_write_datas((uint8_t *)OLED_F6x8[ch - ' '], 6);
    }
    else if(fontsize == 8)
    {
        oled_set_cursor(x, page);
        /*
        for(uint8_t i = 0; i < 8; i++)
        {
            oled_write_data(OLED_F8x16[ch - ' '][i]);
        }
        */
        oled_write_datas((uint8_t *)OLED_F8x16[ch - ' '], 8);
        oled_set_cursor(x, page+1);
        /*
        for(uint8_t i = 0; i < 8; i++)
        {
            oled_write_data(OLED_F8x16[ch - ' '][i+8]);
        }
        */
        oled_write_datas((uint8_t *)OLED_F8x16[ch - ' '] + 8, 8);
    }
}

void oled_show_string(uint8_t x, uint8_t page, char *str, uint8_t fontsize)
{
    for(uint8_t i = 0; str[i] != '\0'; i++)
    {
        oled_show_char(x + i * fontsize, page, str[i], fontsize);
    }
}

void oled_show_chinese(uint8_t x, uint8_t page, char *chinese)
{
    // 放入单个寻找的字的编码
    char sigle_chinese[OLED_CHN_CHAR_WIDTH + 1] = {0};
    uint8_t pChinese = 0;       // 遍历3字节(UTF-8编码格式下)后清零，用于控制结束
    uint8_t pIndex;             // 指定对应的汉字位置

    for(uint8_t i = 0; chinese[i] != '\0'; i++)
    {
        sigle_chinese[pChinese] = chinese[i];
        if(pChinese >= 3)       // 找够3字节(UTF-8编码格式下)数据
        {
            pChinese = 0;

            // 遍历字模库
            for(pIndex = 0; strcmp(OLED_CF16x16[pIndex].Index, "") != 0; pIndex++)
            {
                if(strcmp(OLED_CF16x16[pIndex].Index, sigle_chinese) == 0)
                {
                    break;
                }
            }

            // 显示汉字
            oled_show_image(x + ((i+1) / 3 - 1) * 16, page, 16, 2, OLED_CF16x16[pIndex].Data);
        }
    }
}

void oled_show_num(uint8_t x, uint8_t page, uint32_t num, uint8_t length, uint8_t fontsize)
{
	uint8_t i;
	for (i = 0; i < length; i++)		//遍历数字的每一位							
	{
		/*调用oled_show_num函数，依次显示每个数字*/
		/*num / oled_pow(10, Length - i - 1) % 10 可以十进制提取数字的每一位*/
		/*+ '0' 可将数字转换为字符格式*/
		oled_show_char(x + i * fontsize, page, num / oled_pow(10, length - i - 1) % 10 + '0', fontsize);
	}
}
